--- a/day-3/index.html
+++ b/day-3/index.html
@@ -17,9 +17,7 @@
       <small>Remained</small>
     </div>
 
-    <div class="percentage" id="percentage">
-      20%
-    </div>
+    <div class="percentage" id="percentage"></div>
   </div>
 
   <p class="text"> Selecione a quantidade de água que você tomou</p>
