feat: logica js

--- a/day-3/index.html
+++ b/day-3/index.html
@@ -13,8 +13,8 @@
 
   <div class="cup">
     <div class="remained" id="remained">
-      <span class="liters"></span>
-      <small>Remained</small>
+      <small>Faltam:</small>
+      <span id="liters"></span>
     </div>
 
     <div class="percentage" id="percentage"></div>
@@ -23,8 +23,8 @@
   <p class="text"> Selecione a quantidade de água que você tomou</p>
 
   <div class="cups">
-    <div class="cup cup-small full">250 ml</div>
-    <div class="cup cup-small full">250 ml</div>
+    <div class="cup cup-small">250 ml</div>
+    <div class="cup cup-small">250 ml</div>
     <div class="cup cup-small">250 ml</div>
     <div class="cup cup-small">250 ml</div>
     <div class="cup cup-small">250 ml</div>
