add: html do projeto do dia 5

--- a/day-4/index.html
+++ b/day-4/index.html
@@ -13,7 +13,7 @@
       <li><a href="#">Home</a></li>
       <li><a href="#">Projetos</a></li>
       <li><a href="#">Sobre</a></li>
-      <li><a href="#">Contato</a></li>
+      <li><a href="#">Contato</a></li> <!-- FIXME: jsajsa-->
     </ul>
 
     <button class="icon" id="toggle">
@@ -23,4 +23,4 @@
   </nav>
   <script src="script.js"></script>
 </body>
-</html>
+</html>  <!-- TODO: jsajsa-->
