--- a/day-5/index.html
+++ b/day-5/index.html
@@ -5,22 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <h1>Login</h1>
     <form>
       <div class="form-control">
-        <input type="text" >
+        <input type="text" required>
         <label>Email:</label>
       </div>
-      <div class="form-crontrol">
-        <input type="text">
+      <div class="form-control">
+        <input type="password" required>
         <label>Senha:</label>
       </div>
       <button class="btn">Login</button>
-      <p class="text">Não possui uma conta?<a href="#">Regitrar</a></p>
+      <p class="text">Não possui uma conta?  <a href="#">Regitrar</a></p>
     </form>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
