fix: ajustando html inicial

--- a/index.html
+++ b/index.html
@@ -4,17 +4,46 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>30 projetos em 30 dias</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header> <span> Projeto ' Criando 30 componentes em css e html '</span></header>
+  <section class="intro">
+    <p>Esse projeto teve como objetivo me desafiar a manter uma constância na criação de elementos simples e funcionais em html, css e js.</p>
+    <p>Para desenvolvê-lo mantive em mente a criação componentes reais e funcionais do dia-a-dia na navegação web.</p>
+  </section>
   <section>
-    <a href="/day-1/index.html"><div class="card"> Carrossel</div></a>
-    <a href="/day-2/index.html"><div class="card"> Barra de progresso</div></a>
-    <a href="/day-3/index.html"><div class="card"> Beba agua</div></a>
-    <a href="/day-4/index.html"><div class="card"> Barra de navegacao</div></a>
-    <a href="/day-5/index.html"><div class="card"> Login animado</div></a>
+    <a href="/day-1/index.html">
+      <div class="card"> 
+        <span>Dia 1:</span>
+        <span>Carrossel</span>
+      </div>
+    </a>
+    <a href="/day-2/index.html">
+      <div class="card"> 
+        <span>Dia 2:</span>
+        <span>Barra de Progresso</span>
+      </div>
+    </a>
+    <a href="/day-3/index.html">
+      <div class="card">
+        <span>Dia 3:</span>
+        <span>Beba Agua</span>
+      </div>
+    </a>
+    <a href="/day-4/index.html">
+      <div class="card">
+        <span>Dia 4:</span>
+        <span>Barra de Navegacao</span>
+      </div>
+    </a>
+    <a href="/day-5/index.html">
+      <div class="card"> 
+        <span>Dia 5:</span>
+        <span>Login Animado</span>
+      </div>
+    </a>
     <a href="/day-6/index.html"><div class="card"> 6</div></a>
     <a href="/day-7/index.html"><div class="card"> 7</div></a>
     <a href="/day-8/index.html"><div class="card"> 8</div></a>
