--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
         <span>Login Animado</span>
       </div>
     </a>
-    <a href="/day-6/index.html"><div class="card"> 6</div></a>
+    <a href="/day-6/index.html">
+      <div class="card"> 
+        <span>Dia 6:</span>
+        <span>Botao com efeito de ondulacao</span>
+      </div>
+    </a>
     <a href="/day-7/index.html"><div class="card"> 7</div></a>
     <a href="/day-8/index.html"><div class="card"> 8</div></a>
     <a href="/day-9/index.html"><div class="card"> 9</div></a>
